--- a/src/app/@modules/home/components/card-nova-consulta/agendamento-consulta/agendamento-consulta.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/agendamento-consulta/agendamento-consulta.component.html
@@ -25,17 +25,43 @@
   <div class="col-12">
     <form [formGroup]="formConsulta" class="bg-procedimento">
       <div class="container row pb-4 pt-3">
-        <div class="col-12">
-          <h3 class="mb-0">Selecione o procedimento</h3>
+        <div class="col-6">
+          <h3 class="mb-0">Selecione a especializacao</h3>
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Tipo de procedimento</mat-label>
-            <mat-select formControlName="procedimento" required>
+            <mat-label>Especialização</mat-label>
+            <mat-select
+              formControlName="especializacao"
+              required
+              (selectionChange)="getMedicoPorEspecilizacao($event.value)"
+            >
               <mat-option [value]="sexo.id" *ngFor="let sexo of listaSexo">{{ sexo.name }}</mat-option>
             </mat-select>
             <mat-error>
               <app-error-control-message
-                [control]="formConsulta.controls.procedimento"
-                label="Procedimento"
+                [control]="formConsulta.controls.especializacao"
+                label="Especialização"
+              ></app-error-control-message>
+            </mat-error>
+          </mat-form-field>
+          <div class="col-12" *ngIf="messageError !== ''">
+            <p class="m-0 is-invalid">{{ messageError }}</p>
+          </div>
+          <ng-container *ngIf="loading">
+            <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+            <span class="sr-only">Aguarde, buscando médicos...</span>
+          </ng-container>
+        </div>
+        <div class="col-6">
+          <h3 class="mb-0">Selecione o médico</h3>
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Lista de médicos</mat-label>
+            <mat-select formControlName="medico" required>
+              <mat-option [value]="medico.id" *ngFor="let medico of medicos">{{ medico.name }}</mat-option>
+            </mat-select>
+            <mat-error>
+              <app-error-control-message
+                [control]="formConsulta.controls.medico"
+                label="Médico"
               ></app-error-control-message>
             </mat-error>
           </mat-form-field>
