--- a/src/app/@modules/paciente/paciente.component.html
+++ b/src/app/@modules/paciente/paciente.component.html
@@ -16,9 +16,10 @@
             <!-- /col-md-4 -->
             <!-- Apenas assistente poderá visualizar esse campo -->
             <div class="col-md-8 d-flex align-items-center justify-content-end">
-              <button type="button" mat-raised-button color="primary" class="px-3 py-0" (click)="openDialog()">
-                Nova consulta
-              </button>
+              <!-- <button type="button" mat-raised-button color="primary" class="px-3 py-0" (click)="openDialog()">
+                Novo paciente
+              </button> -->
+              <app-form-novo-paciente></app-form-novo-paciente>
               <div></div>
             </div>
           </div>
