--- a/src/app/@modules/home/components/card-nova-consulta/form-pre-cadastro-paciente/form-pre-cadastro-paciente.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/form-pre-cadastro-paciente/form-pre-cadastro-paciente.component.html
@@ -7,7 +7,7 @@
     <div class="col-12">
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Nome Completo</mat-label>
-        <input type="text" matInput placeholder="Digite primeiro Nome" autocomplete="off" formControlName="nome" />
+        <input type="text" matInput placeholder="Digite o nome completo" autocomplete="off" formControlName="nome" />
         <mat-error>
           <app-error-control-message [control]="form.controls.nome" label="Nome"></app-error-control-message>
         </mat-error>
@@ -68,13 +68,10 @@
     <div class="col-12 col-md-8">
       <mat-form-field appearance="outline">
         <mat-label>Data de nascimento</mat-label>
-        <input matInput [matDatepicker]="picker" formControlName="dtNascimento" />
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
+        <input matInput type="text" formControlName="dtNascimento" mask="00/00/0000" [dropSpecialCharacters]="false" />
         <mat-error>
           <app-error-control-message [control]="form.controls.dtNascimento" label="Data de nascimento">
           </app-error-control-message>
-          <!-- <app-error-control-message [control]="form.get('dtNascimento').hasError('dateValidator')" label="Data"></app-error-control-message> -->
         </mat-error>
       </mat-form-field>
     </div>
@@ -116,6 +113,4 @@
       </button>
     </div>
   </div>
-  <!-- /row-->
-  <!-- <app-form-debug [form]="form"></app-form-debug> -->
 </form>
