--- a/src/app/@modules/configuracoes/components/form-dados-clinica/form-dados-clinica.component.html
+++ b/src/app/@modules/configuracoes/components/form-dados-clinica/form-dados-clinica.component.html
@@ -1,41 +1,150 @@
 <ng-container *ngIf="type === 1">
-  <form>
-    <div class="container-fluid">
-      <form action="">
-        <div class="row m-0 d-flex align-item-center justify-content-center">
-          <div class="col-12">
-            <h3 class="m-0">Dados da clínica</h3>
-            <hr class="my-2" />
-          </div>
-          <div class="col-5 text-center">
-            <h3>Upload Logo</h3>
-            <i class="feather icon-image logo-default" *ngIf="file.value.length === 0"></i>
-            <img [src]="base64" alt="Logo" class="img-thumbnail" *ngIf="file.value.length > 0" />
-            <file-upload
-              [formControl]="file"
-              [control]="controlUpload"
-              (change)="converBase64()"
-              [animation]="animationFile"
-              class="mt-3"
-            >
-              <ng-template let-isFileDragDropAvailable="isFileDragDropAvailable" #placeholder>
-                <span *ngIf="isFileDragDropAvailable">Arraste ou Clique aqui</span>
-              </ng-template>
-
-              <ng-template let-i="index" let-file="file" let-control="control" #item>
-                <div class="file-info">
-                  <span class="file-name">{{ file.name }}</span>
-                  <button mat-button type="button" (click)="removeImg()">
-                    <i class="feather icon-x"></i>
-                  </button>
-                </div>
-              </ng-template>
-            </file-upload>
-          </div>
+  <div class="container-fluid">
+    <form [formGroup]="form">
+      <div class="row m-0 d-flex align-item-center justify-content-center">
+        <div class="col-12">
+          <h3 class="m-0">Dados da clínica</h3>
+          <hr class="my-2" />
         </div>
-      </form>
-    </div>
-  </form>
+        <div class="col-5 text-center">
+          <h3>Upload Logo</h3>
+          <i class="feather icon-image logo-default" *ngIf="file.value.length === 0"></i>
+          <img [src]="base64" alt="Logo" class="img-thumbnail" *ngIf="file.value.length > 0" />
+          <file-upload
+            [formControl]="file"
+            [control]="controlUpload"
+            (change)="converBase64()"
+            [animation]="animationFile"
+            class="mt-3"
+          >
+            <ng-template let-isFileDragDropAvailable="isFileDragDropAvailable" #placeholder>
+              <span *ngIf="isFileDragDropAvailable">Arraste ou Clique aqui</span>
+            </ng-template>
+
+            <ng-template let-i="index" let-file="file" let-control="control" #item>
+              <div class="file-info">
+                <span class="file-name">{{ file.name }}</span>
+                <button mat-button type="button" (click)="removeImg()">
+                  <i class="feather icon-x"></i>
+                </button>
+              </div>
+            </ng-template>
+          </file-upload>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12 col-sm-12">
+          <h3 class="mt-3 mb-0">Dados básicos</h3>
+          <hr class="my-1" />
+        </div>
+        <div class="col-12 col-md-4">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Nome</mat-label>
+            <input type="text" matInput autocomplete="off" formControlName="nome" />
+          </mat-form-field>
+        </div>
+        <div class="col-12 col-md-4">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Horário Abertura</mat-label>
+            <input type="text" matInput autocomplete="off" mask="Hh:m0:s0" formControlName="dtAbertura" />
+          </mat-form-field>
+          <mat-error class="pt-0">
+            <app-error-control-message [control]="form.controls.dtAbertura" label="Data de nascimento">
+            </app-error-control-message>
+          </mat-error>
+        </div>
+        <div class="col-12 col-md-4">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Horário Encerramento</mat-label>
+            <input type="text" matInput autocomplete="off" mask="Hh:m0:s0" formControlName="dtEncerramento" />
+          </mat-form-field>
+          <mat-error class="pt-0">
+            <app-error-control-message [control]="form.controls.dtAbertura" label="Data de nascimento">
+            </app-error-control-message>
+          </mat-error>
+        </div>
+        <ng-container formGroupName="endereco">
+          <div class="col-md-12 col-sm-12">
+            <h3 class="mt-3 mb-0">Endereço</h3>
+            <hr class="my-1" />
+          </div>
+          <div class="col-md-3">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>CEP</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite seu CEP"
+                autocomplete="off"
+                mask="00000-000"
+                formControlName="nuCep"
+              />
+            </mat-form-field>
+          </div>
+          <div class="col-md-2 col-sm-12">
+            <div class="col-md-2 col-sm-12 w-100">
+              <ng-select
+                [items]="listaEstados"
+                bindLabel="name"
+                bindValue="abbreviation"
+                appearance="outline"
+                formControlName="noEstado"
+                placeholder="Selecione"
+              >
+              </ng-select>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Cidade</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite sua cidade"
+                autocomplete="off"
+                formControlName="noCidade"
+              />
+            </mat-form-field>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Logradouro</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite o logradouro"
+                autocomplete="off"
+                formControlName="descRua"
+              />
+            </mat-form-field>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Bairro</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite seu bairro"
+                autocomplete="off"
+                formControlName="descBairro"
+              />
+            </mat-form-field>
+          </div>
+          <div class="col-md-2 col-sm-12">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Número</mat-label>
+              <input type="number" matInput placeholder="Digite o número" autocomplete="off" formControlName="numero" />
+            </mat-form-field>
+          </div>
+        </ng-container>
+        <div class="col-12 d-flex justify-content-end">
+          <button type="button" class="btn btn-secondary me-3">limpar</button>
+          <button type="button" class="btn btn-primary">salvar</button>
+        </div>
+      </div>
+    </form>
+  </div>
 </ng-container>
 <ng-container *ngIf="type === 2">
   <form>
