--- a/src/app/@modules/configuracoes/configuracoes.component.html
+++ b/src/app/@modules/configuracoes/configuracoes.component.html
@@ -6,7 +6,7 @@
           <div class="row m-0">
             <div class="col-12 d-flex justify-content-between align-items-center p-0">
               <h4 class="m-0">Dados da Clínica</h4>
-              <button mat-button type="button" (click)="openDialog(1)">
+              <button mat-button type="button" (click)="openModal(1, 'configuracoes')">
                 <i class="feather icon-edit"></i>
               </button>
             </div>
@@ -33,6 +33,10 @@
                 <i class="feather icon-mail email"></i>
                 <span class="m-0 d-inline">email@gmail.com</span>
               </li>
+              <li>
+                <i class="feather icon-clock"></i>
+                <span class="m-0 d-inline">{{ dadosClinica?.dtAbertura }} - {{ dadosClinica?.dtEncerramento }}</span>
+              </li>
             </ul>
           </div>
         </div>
@@ -43,8 +47,8 @@
         <div class="card-header">
           <div class="row">
             <div class="col-12 d-flex justify-content-between align-items-center">
-              <h4 class="m-0">História</h4>
-              <button mat-button type="button" (click)="openDialog(2)">
+              <h4 class="m-0">Descrição da Clínica</h4>
+              <button mat-button type="button" (click)="openModal(2, 'configuracoes')">
                 <i class="feather icon-edit"></i>
               </button>
             </div>
@@ -67,7 +71,7 @@
           <div class="row">
             <div class="col-12 d-flex justify-content-between align-items-center">
               <h4 class="m-0">Missão, Valores e Visão</h4>
-              <button mat-button type="button" (click)="openDialog(3)">
+              <button mat-button type="button" (click)="openModal(3, 'configuracoes')">
                 <i class="feather icon-edit"></i>
               </button>
             </div>
@@ -100,3 +104,15 @@
     </div>
   </div>
 </div>
+<app-modal-animation modalID="configuracoes" modalClass="md-effect-10 form-cadastro-colaborador">
+  <div class="container md-body py-4 px-0">
+    <div class="row m-0">
+      <div class="col-12 d-flex justify-content-end">
+        <i class="feather icon-x cursor" (click)="modal.close('configuracoes')"></i>
+      </div>
+      <div class="col-12">
+        <app-form-dados-clinica [type]="type" [dados]="dadosClinica"></app-form-dados-clinica>
+      </div>
+    </div>
+  </div>
+</app-modal-animation>
