--- a/src/app/@modules/configuracoes/configuracoes.component.scss
+++ b/src/app/@modules/configuracoes/configuracoes.component.scss
@@ -1,5 +1,63 @@
+::ng-deep {
+  .mat-form-field-appearance-outline .mat-form-field-outline {
+    // background-color: transparent;
+    // background-color: #fafafa;
+    border-radius: 6px;
+    // color: #aaa;
+    cursor: pointer;
+  }
+
+  .mat-icon {
+    color: var(--tcc-light);
+  }
+
+  .mat-form-field-wrapper {
+    padding-bottom: 0;
+  }
+
+  .mat-form-field-appearance-outline .mat-form-field-wrapper {
+    margin: 0.6em 0 !important;
+  }
+
+  .mat-form-field-appearance-outline .mat-form-field-infix {
+    padding: 0.8em 0 0.8em 0;
+  }
+
+  .mat-form-field-infix {
+    border-top: 0.5em solid transparent;
+  }
+
+  .mat-form-field-label {
+    // color: #afb5bd;
+  }
+
+  .mat-form-field-appearance-legacy .mat-form-field-underline {
+    // background-color: #ced4da;
+  }
+
+  .ng-select .ng-select-container.ng-appearance-outline {
+    min-height: 50px !important;
+  }
+
+  .ng-select.ng-select-single .ng-select-container .ng-value-container .ng-input {
+    padding-left: 1rem;
+  }
+
+  .ng-select {
+    padding-bottom: 0;
+    margin-top: 0;
+  }
+  .ng-select .ng-select-container {
+    height: 57px;
+  }
+
+  .ng-select.ng-select:not(.ng-select-opened) > .ng-select-container {
+    border-color: none;
+  }
+}
+
 .bg-configuracoes {
-  width: 100%;
+  // width: 100%;
   height: 180px;
   background: linear-gradient(45deg, #4099ff, #73b4ff);
 }
@@ -20,7 +78,8 @@ ul {
 
     &:hover {
       span {
-        color: var(--tcc-primary);
+        // color: var(--tcc-primary);
+        opacity: 0.6;
       }
     }
   }
@@ -35,6 +94,7 @@ i {
   cursor: pointer;
 
   &:hover {
-    color: var(--tcc-primary);
+    // color: var(--tcc-primary);
+    opacity: 0.6;
   }
 }
