--- a/src/app/@modules/configuracoes/configuracoes.component.html
+++ b/src/app/@modules/configuracoes/configuracoes.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="row">
+  <div class="row m-0">
     <div class="col-4">
       <app-card-content isHeader="true">
         <div class="card-header">
