--- a/src/app/@modules/configuracoes/configuracoes.component.scss
+++ b/src/app/@modules/configuracoes/configuracoes.component.scss
@@ -1,3 +1,5 @@
+@import "../../../theme/form";
+
 ::ng-deep {
   .mat-form-field-appearance-outline .mat-form-field-outline {
     // background-color: transparent;
