--- a/src/app/components/form-dados-basicos-medico/form-dados-basicos-medico.component.html
+++ b/src/app/components/form-dados-basicos-medico/form-dados-basicos-medico.component.html
@@ -35,7 +35,7 @@
                   }}</mat-option>
                 </mat-select>
                 <mat-error>
-                  <app-error-control-message [control]="especializacao.controls.id" label="Descrição">
+                  <app-error-control-message [control]="especializacao.controls.id" label="Especialização">
                   </app-error-control-message>
                 </mat-error>
               </mat-form-field>
