--- a/src/app/components/form-dados-basicos-medico/form-dados-basicos-medico.component.html
+++ b/src/app/components/form-dados-basicos-medico/form-dados-basicos-medico.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="col-12 dados-medicos__header">
       <h3 class="m-0">Dados Médicos</h3>
-      <span>Cadastre seus dados Profissionais</span>
+      <span>Complete seu cadastro</span>
       <hr />
     </div>
 
