--- a/src/app/components/form-dados-basicos-usuario/form-dados-basicos-usuario.component.html
+++ b/src/app/components/form-dados-basicos-usuario/form-dados-basicos-usuario.component.html
@@ -15,7 +15,7 @@
         <input
           type="text"
           matInput
-          placeholder="Digite o nome convêncio"
+          placeholder="Digite o nome convênio"
           autocomplete="off"
           formControlName="descConvenio"
         />
@@ -29,11 +29,11 @@
     </div>
     <div class="col-6">
       <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Nº Inscrição do convêncio</mat-label>
+        <mat-label>Nº Inscrição do convênio</mat-label>
         <input
           type="text"
           matInput
-          placeholder="Digite o nome convêncio"
+          placeholder="Digite o nome convênio"
           autocomplete="off"
           formControlName="nuInscricaoConvenio"
         />
