--- a/src/app/@modules/perfil/perfil.component.html
+++ b/src/app/@modules/perfil/perfil.component.html
@@ -53,7 +53,7 @@
             <div class="row m-0">
               <div class="col-12 d-flex justify-content-between align-items-center p-0">
                 <h4 class="m-0">Dados Profissionais</h4>
-                <button mat-button type="button" (click)="openModal('perfil', 2)">
+                <button mat-button type="button" (click)="openModal('perfil', 2)" *ngIf="!perfilPendente">
                   <i class="feather icon-edit"></i>
                 </button>
               </div>
@@ -86,7 +86,7 @@
             <div class="row m-0">
               <div class="col-12 d-flex justify-content-between align-items-center p-0">
                 <h4 class="m-0">Dados Convênio</h4>
-                <button mat-button type="button" (click)="openModal('perfil', 2)">
+                <button mat-button type="button" (click)="openModal('perfil', 2)" *ngIf="!perfilPendente">
                   <i class="feather icon-edit"></i>
                 </button>
               </div>
@@ -96,10 +96,28 @@
             <div class="col-12 col-md-4">
               <ul class="detalhes">
                 <li>
-                  <span>Convênio: unimed</span>
+                  <span
+                    ><strong>Convênio:</strong>
+                    {{
+                      dadosUser?.paciente?.descConvenio !== null ? dadosUser?.paciente?.descConvenio : 'Sem registro'
+                    }}</span
+                  >
                 </li>
                 <li>
-                  <span>Nº Inscrição: 4152258</span>
+                  <span
+                    ><strong>Nº Inscrição:</strong>
+                    {{
+                      dadosUser?.paciente?.nuInscricaoConvenio !== null
+                        ? dadosUser?.paciente?.nuInscricaoConvenio
+                        : 'Sem registro'
+                    }}</span
+                  >
+                </li>
+                <li>
+                  <span
+                    ><strong>Compartilhar dados:</strong>
+                    {{ dadosUser?.paciente?.compartilhaDados === true ? 'Sim' : 'Não' }}</span
+                  >
                 </li>
               </ul>
             </div>
@@ -124,9 +142,14 @@
           ></app-form-update-medico>
         </ng-container>
         <ng-container *ngIf="perfil === 'PACIENTE'">
-          <app-form-update-paciente [dados]="dadosUser" [type]="type"></app-form-update-paciente>
+          <app-form-update-paciente
+            [dadosUser]="dadosUser"
+            [type]="type"
+            (modalClose)="closeModal($event)"
+          ></app-form-update-paciente>
         </ng-container>
       </div>
     </div>
   </div>
 </app-modal-animation>
+<app-loader *ngIf="loading"></app-loader>
